Revert "fixed spacing"
This reverts commit 84e7e32fdd9df2972c3ff274f09a6b956665769b.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -202,7 +202,7 @@ label{
 
 .col-md-8{
   margin-bottom: 100px;
-  width: 100%;
+  width: 70%;
   display: inline-block;
 }
 .time{
